--- a/about/index.html
+++ b/about/index.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<title>働く環境 | 採用サイト | 長野県信用保証協会</title>
+<title>長野県信用保証協会とは | 採用サイト | 長野県信用保証協会</title>
 
 <meta name="robots" content="max-image-preview:large" />
 <link rel="canonical" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit" />
 <meta property="og:locale" content="ja_JP" />
-<meta property="og:site_name" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta property="og:site_name" content="長野県信用保証協会とは | 採用サイト | 長野県信用保証協会" />
 <meta property="og:type" content="company" />
-<meta property="og:title" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta property="og:title" content="長野県信用保証協会とは | 採用サイト | 長野県信用保証協会" />
 <meta property="og:url" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/guideline" />
 <meta property="og:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta name="twitter:title" content="長野県信用保証協会とは | 採用サイト | 長野県信用保証協会" />
 <meta name="twitter:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 
 <link rel='stylesheet' href='../assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
@@ -23,7 +23,7 @@
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
-<body class="l-body" id="environment">
+<body class="l-body" id="about">
 
 <div class="p-header__sp">
   <button class="p-header__menu-button"></button>
@@ -60,113 +60,60 @@
 <main class="l-main">
 
   <div class="l-hero">
-    <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
-    <img src="../assets/img/environment/main.png" alt="">
+    <h1 class="c-text--h1"><span>ABOUT US</span>長野県信用保証協会とは</h1>
+    <img src="../assets/img/about/main.png" alt="">
   </div>
 
   <section class="l-wrapper__outer2 l-wrapper">
     <section class="l-wrapper--left">
       <div class="l-wrapper--left--fixed">
-        <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
+        <h1 class="c-text--h1"><span>ABOUT US</span>長野県信用保証協会とは</h1>
         <nav class="l-nav">
           <ul>
-            <li><a href="#">福利厚生</a></li>
-            <li><a href="#">研修制度</a></li>
-            <li><a href="#">協会の様子</a></li>
+            <li><a href="#">私たちの役割</a></li>
+            <li><a href="#">基本理念</a></li>
+            <li><a href="#">数字で見る長野信用保証協会</a></li>
           </ul>
         </nav>
       </div>
     </section>
-    <section class="l-wrapper__container l-wrapper--right p-environment">
+    <section class="l-wrapper__container l-wrapper--right p-about">
       <div class="p-text-box">
-        <h2 class="c-text--h2">福利厚生</h2>
-        <p>職員のワークライフバランスを実現するため、さまざまな制度を用意しています。</p>
-        <h3 class="c-text--h3">休日・休暇</h3>
-        <p>完全週休2日制、祝祭日、年末年始（12月30日～1月3日）<br>年次有給休暇、特別有給休暇（慶弔休暇など）、リフレッシュ休暇、 看護休暇、介護休暇、ボランティア休暇 等</p>
-        <h3 class="c-text--h3">子育てサポート</h3>
-        <p>出産休暇（産前産後休暇）、育児休業、育児短時間勤務制度</p>
-        <h3 class="c-text--h3">福利厚生・社内制度</h3>
-        <p>各種社会保険（厚生年金、厚生年金基金、組合健康保険、雇用保険、労災保険）<br>住宅資金・厚生資金貸付制度、医療費補助、各種サークル活動 等<br>職員宿舎（家賃補助）</p>
-      </div>
-      <div class="p-text-box">
-        <h2 class="c-text--h2">研修制度</h2>
-        <p>さまざまな研修制度により、一人ひとりのスキルアップをサポートします。</p>
-        <table class="p-table">
-          <thead class="p-table__head">
-            <tr>
-              <th class="p-table--bg_non"></th>
-              <th>内部研修</th>
-              <th>外部研修</th>
-              <th>通信教育</th>
-            </tr>
-          </thead>
-          <tbody class="p-table__body">
-            <tr>
-              <th>1年目</th>
-              <td>一般教養コース、<br>業務入門コース</td>
-              <td>新人職員研修、<br>ビジネスマナー、<br>電話対応、<br>決算書の見方</td>
-              <td>決算書の分析的、<br>見方・読み方コース、<br>はじめて学ぶ簿記コース</td>
-            </tr>
-            <tr>
-              <th>2年目</th>
-              <td>基本業務コース</td>
-              <td>初級職員研修、<br>若手社員、<br>ブラッシュアップ</td>
-              <td>融資実務基礎コース、<br>登記簿の<br>見方・調べ方コース</td>
-            </tr>
-            <tr>
-              <th>3年目</th>
-              <td rowspan="2">能力開発コース、<br>企業審査入門コース 他</td>
-              <td>基本法令コース、<br>信用調査コース 等</td>
-              <td>民法・社法基礎講座</td>
-            </tr>
-            <tr>
-              <th>4年目<br>以降</th>
-              <td>OJTトレーナー研修、<br>CS研修（百貨店研修）、<br>外部団体等、<br>派遣研修・階層別研修</td>
-              <td>指定の講座から<br>選択して受講 等</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="p-text-box">
-        <h2 class="c-text--h2">協会の様子</h2>
-        <p>職員にアンケートを実施。実際の雰囲気・仕事のやりがい・働く人の印象について、現場の声をまとめました。</p>
-        <div class="p-environment--state p-environment--stateA">
-          <figure>
-            <figcaption>雰囲気</figcaption>
-            <img src="../assets/img/environment/voice_01.png" alt="雰囲気">
-          </figure>
-          <ul>
-            <li><span>年次関係なく、個人としての意見が尊重されます</span></li>
-            <li><span>採用の段階から今も変わらず、雰囲気がいいと感じます</span></li>
-            <li><span>どんなことも、ひとまず受け入れてくれます</span></li>
-            <li><span>職場内外のことを、気軽に相談しあえる空気です</span></li>
-          </ul>
+        <h2 class="c-text--h2">私たちの役割</h2>
+        <p>信用保証協会は、信用保証協会法に基づいて設立された公的機関です。<br>
+          中小企業・小規模事業者のお客様が金融機関から事業資金を借入する際に「公的な保証人」となり、資金調達をサポートしています。万が一返済できなかった場合には、金融機関に立替払い（代位弁済）することを約束します。中小企業の事業資金について「公的保証人」となれるのは、信用保証協会だけ。協会は全国に51（47都道府県＋横浜市、川崎市、岐阜市、名古屋市）あり、長野県信用保証協会はそのひとつです。</p>
+        <div class="p-text-box--bluBox">
+          <h2>信用保証制度のしくみ</h2>
+          <div class="p-text-box--bluBox--inner">
+            <img src="../assets/img/about/fig.png" alt="">
+          </div>
         </div>
-        <div class="p-environment--state p-environment--stateB">
-          <figure>
-            <figcaption>職員の印象</figcaption>
-            <img src="../assets/img/environment/voice_02.png" alt="職員の印象">
-          </figure>
+        <div class="p-about--merit">
+          <h2>中小企業者が信用保証協会を利用するメリットって？</h2>
           <ul>
-            <li><span>困ったことがあると、周りの先輩方がよく助けてくれます</span></li>
-            <li><span>人の話をよく聞く、柔軟性のある人が多いと思います</span></li>
-            <li><span>真面目で、内にやる気が満ちあふれている人がたくさんいます</span></li>
-            <li><span>個性豊かな人が多いので、いろいろな考え方を吸収できます</span></li>
-          </ul>
-        </div>
-        <div class="p-environment--state p-environment--stateC">
-          <figure>
-            <figcaption>仕事のやりがい</figcaption>
-            <img src="../assets/img/environment/voice_03.png" alt="仕事のやりがい">
-          </figure>
-          <ul>
-            <li><span>経営支援の成果が出て、お客様から感謝されたとき</span></li>
-            <li><span>担当した創業先が繁盛しているのを見ると、この仕事をしていてよかったと感じます</span></li>
-            <li><span>お客様へ最適な提案ができるとうれしいです</span></li>
-            <li><span>開業支援をするときは、どんなお店ができるのかわくわくします</span></li>
+            <li>金融機関から融資が受けやすくなる</li>
+            <li>地方公共団体の低金利な融資制度を利用できる</li>
+            <li>無担保、第三者保証人不要で融資が受けられる</li>
+            <li>各種支援サービスを無料で受けられる</li>
           </ul>
         </div>
       </div>
+
+      <div class="p-text-box">
+        <h2 class="c-text--h2">基本理念</h2>
+        <p class="p-about--philosophy">私たち長野県信用保証協会は信用保証により<br>明日を拓く中小企業を力強くサポートし<br>長野県の洋々たる発展の一翼を担う</p>
+      </div>
+
+      <div class="p-text-box">
+        <h2 class="c-text--h2">数字で見る長野県信用保証協会</h2>
+        <section>
+          <div>
+            <h2></h2>
+            <div></div>
+          </div>
+        </section>
+      </div>
+
     </section>
   </section>
 </main>
