--- a/guideline/index.html
+++ b/guideline/index.html
@@ -47,7 +47,7 @@
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../about">長野県信用保証協会とは</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../works/">仕事を知る</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../people/">人を知る</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="../supportCase/">支援事例</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="../case/">支援事例</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../workingEnvironment/">働く環境</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../guideline/">募集要項</a></li>
         </ul>
@@ -248,12 +248,12 @@
           </dl>
           <dl class="p-footer__list">
             <div class="p-footer__list-item">
-              <dt><a href="../supportCase/">支援事例</a></dt>
-              <dd><a href="../supportCase/founder/">創業者支援
-              <dd><a href="../supportCase/businessSuccession/">事業承継支援</a></dd>
-              <dd><a href="../supportCase/managementImprovement/">経営改善支援</a></dd>
-              <dd><a href="../supportCase/problemSolving/">課題解決支援</a></dd>
-              <dd><a href="../supportCase/jigyosaisei/">事業再生支援</a></dd>
+              <dt><a href="../case/">支援事例</a></dt>
+              <dd><a href="../case/founder/">創業者支援
+              <dd><a href="../case/businessSuccession/">事業承継支援</a></dd>
+              <dd><a href="../case/managementImprovement/">経営改善支援</a></dd>
+              <dd><a href="../case/problemSolving/">課題解決支援</a></dd>
+              <dd><a href="../case/jigyosaisei/">事業再生支援</a></dd>
             </div>
             <div class="p-footer__list-item">
               <dt><a href="../workingEnvironment/">働く環境</a></dt>
