--- a/case/index.html
+++ b/case/index.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<title>働く環境 | 採用サイト | 長野県信用保証協会</title>
+<title>支援事例 | 採用サイト | 長野県信用保証協会</title>
 
 <meta name="robots" content="max-image-preview:large" />
 <link rel="canonical" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit" />
 <meta property="og:locale" content="ja_JP" />
-<meta property="og:site_name" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta property="og:site_name" content="支援事例 | 採用サイト | 長野県信用保証協会" />
 <meta property="og:type" content="company" />
-<meta property="og:title" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta property="og:title" content="支援事例 | 採用サイト | 長野県信用保証協会" />
 <meta property="og:url" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/guideline" />
 <meta property="og:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta name="twitter:title" content="支援事例 | 採用サイト | 長野県信用保証協会" />
 <meta name="twitter:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 
 <link rel='stylesheet' href='../assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
@@ -23,7 +23,7 @@
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
-<body class="l-body" id="environment">
+<body class="l-body" id="about">
 
 <div class="p-header__sp">
   <button class="p-header__menu-button"></button>
@@ -59,114 +59,117 @@
 
 <main class="l-main">
 
-  <div class="l-hero">
-    <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
-    <img src="../assets/img/environment/main.png" alt="">
-  </div>
+  <!-- <div class="l-hero">
+    <h1 class="c-text--h1"><span>CASE</span>支援事例</h1>
+    <img src="../assets/img/works/main.png" alt="">
+  </div> -->
 
   <section class="l-wrapper__outer2 l-wrapper">
     <section class="l-wrapper--left">
       <div class="l-wrapper--left--fixed">
-        <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
+        <h1 class="c-text--h1"><span>CASE</span>支援事例</h1>
         <nav class="l-nav">
           <ul>
-            <li><a href="#">福利厚生</a></li>
-            <li><a href="#">研修制度</a></li>
-            <li><a href="#">協会の様子</a></li>
+            <li><a href="#">創業者支援</a></li>
+            <li><a href="#">事業継承支援</a></li>
+            <li><a href="#">経営改善支援</a></li>
+            <li><a href="#">課題解決支援</a></li>
+            <li><a href="#">事業再生支援</a></li>
           </ul>
         </nav>
       </div>
     </section>
-    <section class="l-wrapper__container l-wrapper--right p-environment">
+    <section class="l-wrapper__container l-wrapper--right p-case">
+
       <div class="p-text-box">
-        <h2 class="c-text--h2">福利厚生</h2>
-        <p>職員のワークライフバランスを実現するため、さまざまな制度を用意しています。</p>
-        <h3 class="c-text--h3">休日・休暇</h3>
-        <p>完全週休2日制、祝祭日、年末年始（12月30日～1月3日）<br>年次有給休暇、特別有給休暇（慶弔休暇など）、リフレッシュ休暇、 看護休暇、介護休暇、ボランティア休暇 等</p>
-        <h3 class="c-text--h3">子育てサポート</h3>
-        <p>出産休暇（産前産後休暇）、育児休業、育児短時間勤務制度</p>
-        <h3 class="c-text--h3">福利厚生・社内制度</h3>
-        <p>各種社会保険（厚生年金、厚生年金基金、組合健康保険、雇用保険、労災保険）<br>住宅資金・厚生資金貸付制度、医療費補助、各種サークル活動 等<br>職員宿舎（家賃補助）</p>
-      </div>
-      <div class="p-text-box">
-        <h2 class="c-text--h2">研修制度</h2>
-        <p>さまざまな研修制度により、一人ひとりのスキルアップをサポートします。</p>
-        <table class="p-table">
-          <thead class="p-table__head">
-            <tr>
-              <th class="p-table--bg_non"></th>
-              <th>内部研修</th>
-              <th>外部研修</th>
-              <th>通信教育</th>
-            </tr>
-          </thead>
-          <tbody class="p-table__body">
-            <tr>
-              <th>1年目</th>
-              <td>一般教養コース、<br>業務入門コース</td>
-              <td>新人職員研修、<br>ビジネスマナー、<br>電話対応、<br>決算書の見方</td>
-              <td>決算書の分析的、<br>見方・読み方コース、<br>はじめて学ぶ簿記コース</td>
-            </tr>
-            <tr>
-              <th>2年目</th>
-              <td>基本業務コース</td>
-              <td>初級職員研修、<br>若手社員、<br>ブラッシュアップ</td>
-              <td>融資実務基礎コース、<br>登記簿の<br>見方・調べ方コース</td>
-            </tr>
-            <tr>
-              <th>3年目</th>
-              <td rowspan="2">能力開発コース、<br>企業審査入門コース 他</td>
-              <td>基本法令コース、<br>信用調査コース 等</td>
-              <td>民法・社法基礎講座</td>
-            </tr>
-            <tr>
-              <th>4年目<br>以降</th>
-              <td>OJTトレーナー研修、<br>CS研修（百貨店研修）、<br>外部団体等、<br>派遣研修・階層別研修</td>
-              <td>指定の講座から<br>選択して受講 等</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="p-text-box">
-        <h2 class="c-text--h2">協会の様子</h2>
-        <p>職員にアンケートを実施。実際の雰囲気・仕事のやりがい・働く人の印象について、現場の声をまとめました。</p>
-        <div class="p-environment--state p-environment--stateA">
-          <figure>
-            <figcaption>雰囲気</figcaption>
-            <img src="../assets/img/environment/voice_01.png" alt="雰囲気">
-          </figure>
-          <ul>
-            <li><span>年次関係なく、個人としての意見が尊重されます</span></li>
-            <li><span>採用の段階から今も変わらず、雰囲気がいいと感じます</span></li>
-            <li><span>どんなことも、ひとまず受け入れてくれます</span></li>
-            <li><span>職場内外のことを、気軽に相談しあえる空気です</span></li>
-          </ul>
+        <h2 class="c-text--h2">創業者支援</h2>
+        <div class="p-text-box--bluBox">
+          <h2><span>CASE 01</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <div class="p-text-box--bluBox--inner">
+            <div>
+              <dl>
+                <div>
+                  <dt>事業者</dt>
+                  <dd>個人経営のケーキ屋さん</dd>
+                </div>
+                <div>
+                  <dt>課題</dt>
+                  <dd>優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="flow">
+              <div>
+                <h2>支援内容</h2>
+                <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
+              </div>
+              <div>
+                <h2>結果</h2>
+                <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="p-environment--state p-environment--stateB">
-          <figure>
-            <figcaption>職員の印象</figcaption>
-            <img src="../assets/img/environment/voice_02.png" alt="職員の印象">
-          </figure>
-          <ul>
-            <li><span>困ったことがあると、周りの先輩方がよく助けてくれます</span></li>
-            <li><span>人の話をよく聞く、柔軟性のある人が多いと思います</span></li>
-            <li><span>真面目で、内にやる気が満ちあふれている人がたくさんいます</span></li>
-            <li><span>個性豊かな人が多いので、いろいろな考え方を吸収できます</span></li>
-          </ul>
-        </div>
-        <div class="p-environment--state p-environment--stateC">
-          <figure>
-            <figcaption>仕事のやりがい</figcaption>
-            <img src="../assets/img/environment/voice_03.png" alt="仕事のやりがい">
-          </figure>
-          <ul>
-            <li><span>経営支援の成果が出て、お客様から感謝されたとき</span></li>
-            <li><span>担当した創業先が繁盛しているのを見ると、この仕事をしていてよかったと感じます</span></li>
-            <li><span>お客様へ最適な提案ができるとうれしいです</span></li>
-            <li><span>開業支援をするときは、どんなお店ができるのかわくわくします</span></li>
-          </ul>
+        <div class="p-text-box--bluBox">
+          <h2><span>CASE 02</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <div class="p-text-box--bluBox--inner">
+            <div>
+              <dl>
+                <div>
+                  <dt>事業者</dt>
+                  <dd>個人経営のケーキ屋さん</dd>
+                </div>
+                <div>
+                  <dt>課題</dt>
+                  <dd>優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="flow">
+              <div>
+                <h2>支援内容</h2>
+                <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
+              </div>
+              <div>
+                <h2>結果</h2>
+                <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="p-text-box">
+        <h2 class="c-text--h2">創業者支援</h2>
+        <div class="p-text-box--bluBox">
+          <h2><span>CASE 08</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <div class="p-text-box--bluBox--inner">
+            <div>
+              <dl>
+                <div>
+                  <dt>事業者</dt>
+                  <dd>個人経営のケーキ屋さん</dd>
+                </div>
+                <div>
+                  <dt>課題</dt>
+                  <dd>優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="flow">
+              <div>
+                <h2>支援内容</h2>
+                <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
+              </div>
+              <div>
+                <h2>結果</h2>
+                <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
   </section>
 </main>
