--- a/works/index.html
+++ b/works/index.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<title>働く環境 | 採用サイト | 長野県信用保証協会</title>
+<title>仕事を知る | 採用サイト | 長野県信用保証協会</title>
 
 <meta name="robots" content="max-image-preview:large" />
 <link rel="canonical" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit" />
 <meta property="og:locale" content="ja_JP" />
-<meta property="og:site_name" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta property="og:site_name" content="仕事を知る | 採用サイト | 長野県信用保証協会" />
 <meta property="og:type" content="company" />
-<meta property="og:title" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta property="og:title" content="仕事を知る | 採用サイト | 長野県信用保証協会" />
 <meta property="og:url" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/guideline" />
 <meta property="og:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="働く環境 | 採用サイト | 長野県信用保証協会" />
+<meta name="twitter:title" content="仕事を知る | 採用サイト | 長野県信用保証協会" />
 <meta name="twitter:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 
 <link rel='stylesheet' href='../assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
@@ -23,7 +23,7 @@
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
-<body class="l-body" id="environment">
+<body class="l-body" id="about">
 
 <div class="p-header__sp">
   <button class="p-header__menu-button"></button>
@@ -60,113 +60,68 @@
 <main class="l-main">
 
   <div class="l-hero">
-    <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
-    <img src="../assets/img/environment/main.png" alt="">
+    <h1 class="c-text--h1"><span>WORKS</span>仕事を知る</h1>
+    <img src="../assets/img/works/main.png" alt="">
   </div>
 
   <section class="l-wrapper__outer2 l-wrapper">
     <section class="l-wrapper--left">
       <div class="l-wrapper--left--fixed">
-        <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
+        <h1 class="c-text--h1"><span>WORKS</span>仕事を知る</h1>
         <nav class="l-nav">
           <ul>
-            <li><a href="#">福利厚生</a></li>
-            <li><a href="#">研修制度</a></li>
-            <li><a href="#">協会の様子</a></li>
+            <li><a href="#">営業部</a></li>
+            <li><a href="#">企業支援部</a></li>
+            <li><a href="#">業務統括部</a></li>
+            <li><a href="#">総務部</a></li>
+            <li><a href="#">コンプライアンス統括部</a></li>
           </ul>
         </nav>
       </div>
     </section>
-    <section class="l-wrapper__container l-wrapper--right p-environment">
+    <section class="l-wrapper__container l-wrapper--right p-works">
       <div class="p-text-box">
-        <h2 class="c-text--h2">福利厚生</h2>
-        <p>職員のワークライフバランスを実現するため、さまざまな制度を用意しています。</p>
-        <h3 class="c-text--h3">休日・休暇</h3>
-        <p>完全週休2日制、祝祭日、年末年始（12月30日～1月3日）<br>年次有給休暇、特別有給休暇（慶弔休暇など）、リフレッシュ休暇、 看護休暇、介護休暇、ボランティア休暇 等</p>
-        <h3 class="c-text--h3">子育てサポート</h3>
-        <p>出産休暇（産前産後休暇）、育児休業、育児短時間勤務制度</p>
-        <h3 class="c-text--h3">福利厚生・社内制度</h3>
-        <p>各種社会保険（厚生年金、厚生年金基金、組合健康保険、雇用保険、労災保険）<br>住宅資金・厚生資金貸付制度、医療費補助、各種サークル活動 等<br>職員宿舎（家賃補助）</p>
+        <p>協会には5つの部署があり、それぞれが連携し合ってお客様を支えています。
+          各部署がどんな仕事をしているのかを、詳しくご紹介します。</p>
       </div>
+
       <div class="p-text-box">
-        <h2 class="c-text--h2">研修制度</h2>
-        <p>さまざまな研修制度により、一人ひとりのスキルアップをサポートします。</p>
-        <table class="p-table">
-          <thead class="p-table__head">
-            <tr>
-              <th class="p-table--bg_non"></th>
-              <th>内部研修</th>
-              <th>外部研修</th>
-              <th>通信教育</th>
-            </tr>
-          </thead>
-          <tbody class="p-table__body">
-            <tr>
-              <th>1年目</th>
-              <td>一般教養コース、<br>業務入門コース</td>
-              <td>新人職員研修、<br>ビジネスマナー、<br>電話対応、<br>決算書の見方</td>
-              <td>決算書の分析的、<br>見方・読み方コース、<br>はじめて学ぶ簿記コース</td>
-            </tr>
-            <tr>
-              <th>2年目</th>
-              <td>基本業務コース</td>
-              <td>初級職員研修、<br>若手社員、<br>ブラッシュアップ</td>
-              <td>融資実務基礎コース、<br>登記簿の<br>見方・調べ方コース</td>
-            </tr>
-            <tr>
-              <th>3年目</th>
-              <td rowspan="2">能力開発コース、<br>企業審査入門コース 他</td>
-              <td>基本法令コース、<br>信用調査コース 等</td>
-              <td>民法・社法基礎講座</td>
-            </tr>
-            <tr>
-              <th>4年目<br>以降</th>
-              <td>OJTトレーナー研修、<br>CS研修（百貨店研修）、<br>外部団体等、<br>派遣研修・階層別研修</td>
-              <td>指定の講座から<br>選択して受講 等</td>
-            </tr>
-          </tbody>
-        </table>
+        <h2 class="c-text--h2">営業部</h2>
+        <p>実際にお客様と対話し、課題の解決策を一緒に考える機会が多い部署です。保証相談を受け、現状分析やヒアリングから審査を行う「保証審査業務」、保証をご利用いただいている中小企業の経営・再生支援、創業者のフォローアップを行う「経営支援」、代位弁済（※）後の債務に係る管理や回収といった、お客様の債務解決に関わる「管理回収業務」等を行います。<br>
+          ※信用保証協会が中小企業に代わって金融機関へ借入金を返済すること</p>
       </div>
+
       <div class="p-text-box">
-        <h2 class="c-text--h2">協会の様子</h2>
-        <p>職員にアンケートを実施。実際の雰囲気・仕事のやりがい・働く人の印象について、現場の声をまとめました。</p>
-        <div class="p-environment--state p-environment--stateA">
-          <figure>
-            <figcaption>雰囲気</figcaption>
-            <img src="../assets/img/environment/voice_01.png" alt="雰囲気">
-          </figure>
-          <ul>
-            <li><span>年次関係なく、個人としての意見が尊重されます</span></li>
-            <li><span>採用の段階から今も変わらず、雰囲気がいいと感じます</span></li>
-            <li><span>どんなことも、ひとまず受け入れてくれます</span></li>
-            <li><span>職場内外のことを、気軽に相談しあえる空気です</span></li>
-          </ul>
-        </div>
-        <div class="p-environment--state p-environment--stateB">
-          <figure>
-            <figcaption>職員の印象</figcaption>
-            <img src="../assets/img/environment/voice_02.png" alt="職員の印象">
-          </figure>
-          <ul>
-            <li><span>困ったことがあると、周りの先輩方がよく助けてくれます</span></li>
-            <li><span>人の話をよく聞く、柔軟性のある人が多いと思います</span></li>
-            <li><span>真面目で、内にやる気が満ちあふれている人がたくさんいます</span></li>
-            <li><span>個性豊かな人が多いので、いろいろな考え方を吸収できます</span></li>
-          </ul>
-        </div>
-        <div class="p-environment--state p-environment--stateC">
-          <figure>
-            <figcaption>仕事のやりがい</figcaption>
-            <img src="../assets/img/environment/voice_03.png" alt="仕事のやりがい">
-          </figure>
-          <ul>
-            <li><span>経営支援の成果が出て、お客様から感謝されたとき</span></li>
-            <li><span>担当した創業先が繁盛しているのを見ると、この仕事をしていてよかったと感じます</span></li>
-            <li><span>お客様へ最適な提案ができるとうれしいです</span></li>
-            <li><span>開業支援をするときは、どんなお店ができるのかわくわくします</span></li>
-          </ul>
-        </div>
+        <h2 class="c-text--h2">企業支援部</h2>
+        <h3 class="c-text--h3">企業支援課</h3>
+        <p>信用保証制度の改正・周知や各支援事業の統括といった、業務全般に関わる企画、調整及び推進を行います。さらに、地域全体の経営改善や再生スキルの向上を目的とした「信州中小企業ネットワーク会議」の事務局運営も担っています。お客様の意見を聞き、制度創設等業務に反映させる部署です。</p>
+        <h3 class="c-text--h3">審査課</h3>
+        <p>営業店で行う「保証審査業務」と「管理回収業務」を統括する部署です。保証審査に関する相談業務、求償権（※）の管理・回収の統括や指導を行っています。実際に業務を行う営業店に正確な情報を共有することが重要な部署です。<br>
+          ※他人のための弁済をした者が、他人に対してその返還または弁済を求めること</p>
       </div>
+
+      <div class="p-text-box">
+        <h2 class="c-text--h2">業務統括部</h2>
+        <h3 class="c-text--h3">信用保険課</h3>
+        <p>代位弁済の手続きを統括する部署です。また、中小企業者からの弁済金の回収金処理等も行っています。制度の根幹を支える部署であり、協会が在る意義を実感しやすい部署です。</p>
+        <h3 class="c-text--h3">業務課</h3>
+        <p>財務データの入力、保証稟議書の管理、全国信用保証協会連合会等への定期報告といった「保証事務」と、法的措置、債権管理等に関わる「管理事務」を行います。営業店の職員を事務的な側面から支えることで、業務を円滑化する役割を担っています。</p>
+      </div>
+
+      <div class="p-text-box">
+        <h2 class="c-text--h2">総務部</h2>
+        <h3 class="c-text--h3">総務課</h3>
+        <p>協会の「人」と「お金」を適切に管理することで、協会を裏から支える部署です。<br>
+          人事や給与等、働く職員に関する業務を担う「総務」と、予算や保証料など、金銭面の管理を担う「経理」の仕事があります。</p>
+        <h3 class="c-text--h3">企画情報課</h3>
+        <p>経営企画に関する業務全般を行います。具体的な業務には、経営計画の策定、Webサイト管理等のシステム運用、お客様に協会の存在を知ってもらうための広報活動などがあります。</p>
+      </div>
+
+      <div class="p-text-box">
+        <h2 class="c-text--h2">コンプライアンス統括部</h2>
+        <p>内部監査やコンプライアンス管理、個人情報保護など、コンプライアンスに関わる業務を統括します。</p>
+      </div>
+
     </section>
   </section>
 </main>
