--- a/people/index.html
+++ b/people/index.html
@@ -76,55 +76,59 @@
         </nav>
       </div>
     </section>
-    <section class="l-wrapper__container l-wrapper--right p-works">
+    <section class="l-wrapper__container l-wrapper--right p-people">
 
       <div class="p-text-box" id="anchor--01">
         <h2 class="c-text--h2">職員紹介</h2>
         <p>職員の性格は十人十色、仕事内容も多種多様。それぞれの特性を活かしながら、日々お客様と向き合っている職員を紹介します。</p>
+        <section class="p-people--intro">
+          <a href="./people01.html" class="p-people--intro--div intro_01">
+            <figure>
+              <img src="../assets/img/people/people01A.png" alt="中島 菜々子">
+              <figcaption>明朗快活で<br>場を明るくする<br>期待の新人職員</figcaption>
+            </figure>
+            <h2>中島 菜々子<span>1年目 松本営業部業務第1課</span></h2>
+          </a>
+          <a href="./people02.html" class="p-people--intro--div intro_02">
+            <figure>
+              <img src="../assets/img/people/people02A.png" alt="本田 朋樹">
+              <figcaption>課題を<br>本質から解決する<br>気鋭の若手職員</figcaption>
+            </figure>
+            <h2>本田 朋樹<span>2年目 松本営業部業務第2課</span></h2>
+          </a>
+          <a href="./people03.html" class="p-people--intro--div intro_03">
+            <figure>
+              <img src="../assets/img/people/people03A.png" alt="浦野 章博">
+              <figcaption>相手の話に<br>しっかり寄り添う<br>気さくな<br>広報担当職員</figcaption>
+            </figure>
+            <h2>浦野 章博<span>8年目 総務部企画情報課</span></h2>
+          </a>
+          <a href="./people04.html" class="p-people--intro--div intro_04">
+            <figure>
+              <img src="../assets/img/people/people04A.png" alt="一ノ瀬 美波">
+              <figcaption>誠実に<br>お客様と向き合う<br>優しい<br>ワーキングママ</figcaption>
+            </figure>
+            <h2>一ノ瀬 美波<span>14年目 本店営業部業務第2課</span></h2>
+          </a>
+          <a href="./people05.html" class="p-people--intro--div intro_05">
+            <figure>
+              <img src="../assets/img/people/people05A.png" alt="石坂 友弥">
+              <figcaption>さりげない<br>気配りで<br>誰からも頼られる<br>ベテラン社員</figcaption>
+            </figure>
+            <h2>石坂 友弥<span>16年目 業務統括部業務課</span></h2>
+          </a>
+        </section>
       </div>
 
-
-      <figure>
-        <img src="" alt="">
-        <figcaption>明朗快活で場を明るくする期待の新人職員</figcaption>
-      </figure>
-      中島 菜々子
-      1年目 松本営業部業務第1課
-
-      <figure>
-        <img src="" alt="">
-        <figcaption>課題を本質から解決する気鋭の若手職員</figcaption>
-      </figure>
-      本田 朋樹
-      2年目 松本営業部業務第2課
-
-      <figure>
-        <img src="" alt="">
-        <figcaption>相手の話にしっかり寄り添う気さくな広報担当職員</figcaption>
-      </figure>
-      浦野 章博
-      8年目 総務部企画情報課
-
-      <figure>
-        <img src="" alt="">
-        <figcaption>誠実にお客様と向き合う優しいワーキングママ</figcaption>
-      </figure>
-      一ノ瀬 美波
-      14年目 本店営業部業務第2課
-
-      <figure>
-        <img src="" alt="">
-        <figcaption>さりげない気配りで誰からも頼られるベテラン社員</figcaption>
-      </figure>
-      石坂 友弥
-      16年目 業務統括部業務課
-
-
-
-      それぞれの色を持った職員が、年齢、性別、キャリアの垣根を超えて、<br>
-      協会で働く日々について語り合いました！
-
-      <a href=""><span>もっと見る</span></a>
+      <div class="p-text-box" id="anchor--02">
+        <div class="p-people--bnr">
+          <h2 class="p-people--bnr--title"><img src="../assets/img/people/zadankai_title.svg" alt="長野県信用保証協会職員　座談会"></h2>
+          <p class="p-people--bnr--text">それぞれの色を持った職員が、年齢、性別、キャリアの垣根を超えて、<br>
+            協会で働く日々について語り合いました！</p>
+            <a class="c-arrow" href=""><span>もっと見る</span></a>
+          <figure class="p-people--bnr--people"><img src="../assets/img/people/zadankai_people.png" alt=""></figure>
+        </div>
+      </div>
 
     </section>
   </section>
