--- a/people/people01.html
+++ b/people/people01.html
@@ -75,71 +75,67 @@
         <h2>中島 菜々子<span> （1年目 松本営業部業務第1課）</span></h2>
       </div>
     </section>
-    <section class="l-wrapper__container l-wrapper--right p-works">
+    <section class="l-wrapper__container l-wrapper--right p-people">
 
-      <div class="p-text-box" id="anchor--01">
-        <h2 class="c-text--h2">現在の仕事</h2>
-        中小企業を、後方から支える
+      <div class="p-text-box">
+        <h2 class="c-text--h2"><span>現在の仕事</span>中小企業を、後方から支える</h2>
         <p>現在は、保証稟議書の作成などを行う保証業務や、郵便物開封、公用車管理といった庶務を中心に行っています。先輩方と一緒に、お客様の経営支援に赴くこともあります。一年目なので、業務の基礎的なことを教わっている最中です。<br>
           協会の仕事は、中小企業のお客様を後方から支えることだと思っています。「公的な保証人」という、金融機関とは別の立場から企業支援ができることに、魅力を感じています。</p>
           <img src="../assets/img/people/people01/pic_01.png" alt="">
       </div>
 
-      <div class="p-text-box" id="anchor--01">
-        <h2 class="c-text--h2">協会の魅力</h2>
-        お客様にとってのメリットを、一番に考えて仕事ができる
+      <div class="p-text-box">
+        <h2 class="c-text--h2"><span>協会の魅力</span>お客様にとってのメリットを、一番に考えて仕事ができる</h2>
         <p>協会の魅力は、お客様にとってのメリットを一番に考えられることです。経営支援などで関わった企業が実際に活躍されているのを見ると、やりがいを感じます。経営支援に赴くことは、今の楽しみのひとつです。<br>
           でも、自分がお客様を支えているというよりは、お客様に支えられていると感じることが多いですね。お話するなかで、自分が勉強させていただくこともたくさんあります。「一方的に支えている」というより、「支え合っている」という感覚に近いです。</p>
           <img src="../assets/img/people/people01/pic_02.png" alt="">
       </div>
 
-      <div class="p-text-box" id="anchor--01">
-        <h2 class="c-text--h2">今後の目標</h2>
-        尊敬する先輩のように、誰からも信頼される人になる
+      <div class="p-text-box">
+        <h2 class="c-text--h2"><span>今後の目標</span>尊敬する先輩のように、誰からも信頼される人になる</h2>
         <p>金融機関の方にも中小企業の方にも信頼される、知識と人柄を身につけることです。目標としている先輩のようになれるよう、日々勉強中です。<br>
           先輩は、業務のなかでわからないことがあったり、失敗したりしてしまったときも、丁寧にフォローしてくれます。業務以外の相談にのっていただくこともあり、普段からよく様子を見て、気にかけてくれているのを感じます。一人ひとりがしっかりと責任を持ち、お互いに助け合う、先輩方の姿をとても尊敬しています。自分もそんな人になりたいです。</p>
       </div>
 
-
-      ある1日のスケジュール
-      <div>
-        <dl>
-          <div>
-            <dt>8:30</dt>
-            <dd>出勤</dd>
-          </div>
-          <div>
-            <dt>8:45</dt>
-            <dd>メールの確認等業務準備<br>郵便開封、仕分け</dd>
-          </div>
-          <div>
-            <dt>9:15</dt>
-            <dd>保証審査補助、庶務</dd>
-          </div>
-          <div>
-            <dt>12:00</dt>
-            <dd>昼食</dd>
-          </div>
-          <div>
-            <dt>13:00</dt>
-            <dd>保証稟議書の作成</dd>
-          </div>
-          <div>
-            <dt>16:30</dt>
-            <dd>資料片付け</dd>
-          </div>
-          <div>
-            <dt>16:50</dt>
-            <dd>一日の振り返り</dd>
-          </div>
-          <div>
-            <dt>17:20</dt>
-            <dd>退勤</dd>
-          </div>
-        </dl>
-
+      <div class="p-text-box">
+        <h3 class="c-text--h3">ある1日のスケジュール</h3>
+        <div class="p-people--schedule">
+          <dl>
+            <div>
+              <dt> 8:30</dt>
+              <dd>出勤</dd>
+            </div>
+            <div>
+              <dt> 8:45</dt>
+              <dd>メールの確認等業務準備<br>郵便開封、仕分け</dd>
+            </div>
+            <div>
+              <dt> 9:15</dt>
+              <dd>保証審査補助、庶務</dd>
+            </div>
+            <div>
+              <dt>12:00</dt>
+              <dd>昼食</dd>
+            </div>
+            <div>
+              <dt>13:00</dt>
+              <dd>保証稟議書の作成</dd>
+            </div>
+            <div>
+              <dt>16:30</dt>
+              <dd>資料片付け</dd>
+            </div>
+            <div>
+              <dt>16:50</dt>
+              <dd>一日の振り返り</dd>
+            </div>
+            <div>
+              <dt>17:20</dt>
+              <dd>退勤</dd>
+            </div>
+          </dl>
+        </div>
       </div>
-
 
       <figure>
         <img src="" alt="">
